--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "node-garden-receiver",
+  "description": "Uses node v12.22.12",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "reinstall": "rm -f package-lock.json && rm -fr node_modules && npm install"
   },
   "dependencies": {
     "@types/bunyan": "^1.8.11",
     "@types/change-case": "^2.3.1",
+    "@types/express": "^4.17.0",
+    "@types/express-serve-static-core": "4.17.31",
     "@types/mysql": "^2.15.26",
-    "@types/node": "10.12.18",
+    "@types/node": "18.11.9",
     "@types/nodemailer": "^4.6.8",
     "bunyan": "^1.8.15",
     "change-case": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "^4.21.2",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "minimist": "^1.2.8",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.1.1",
-    "tslint": "^5.11.0",
-    "typescript": "^2.9.2"
+    "nodemailer": "^6.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.16",
+    "tslint": "^5.11.0"
   }
 }
